--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,11 +27,9 @@
     </string-array>
     <string name="facebook_app_id">292826664586094</string>
     <string name="fb_login_protocol_scheme">fb292826664586094</string>
-
     <string name="khoaname">(Lưu ý: Tài khoản bị khóa nếu nội dung chát không lành mạnh)</string>
     <string name="dangnhapthanhcong">Đăng nhập thành công!</string>
     <string name="dangnhapkhongthanhcong">Lỗi đăng nhập, xin thử lại.</string>
-    <!--<string name="loidocdulieu">Lỗi đọc dữ liệu</string>-->
     <string name="linkdangky">http://dkh.tlu.edu.vn</string>
     <string name="hoi">Bạn có muốn xóa lịch trước đó không ?</string>
     <string name="ketquadk">/CMCSoft.IU.Web.Info/Reports/Form/StudentTimeTable.aspx</string>
@@ -40,4 +38,9 @@
     <string name="luuURL">luuURL</string>
     <string name="version">© 2017 LUONG CHUNG Version 3.0</string>
     <string name="idfacebook">100004154587803</string>
+    <string name="toast_message">hello</string>
+    <string name="buffering_string">Xin chờ load video</string>
+    <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="seek_to">Jump To</string>
+    <string name="seek_to_hint">Seconds</string>
 </resources>
